个人信息、主页

--- a/static/appData.json
+++ b/static/appData.json
@@ -1,22 +1,26 @@
 {
-	"sex":[{"key":1,"value":"男"},{"key":2,"value":"女"}],
+	"sex":[{"key":-1,"value":"请选择"},{"key":1,"value":"男"},{"key":2,"value":"女"}],
 	"bloodType":[
+		{"key":-1,"value":"请选择"},
 		{"key":0,"value":"A型"},
 		{"key":1,"value":"B型"},
 		{"key":2,"value":"AB型"},
 		{"key":3,"value":"O型"}
 	],
 	"zodiac":[
+		{"key":-1,"value":"请选择"},
 		{"key":0,"value":"鼠"},{"key":1,"value":"牛"},{"key":2,"value":"虎"},{"key":3,"value":"兔"},
 		{"key":4,"value":"龙"},{"key":5,"value":"蛇"},{"key":6,"value":"马"},{"key":7,"value":"羊"},
 		{"key":8,"value":"猴"},{"key":9,"value":"鸡"},{"key":10,"value":"狗"},{"key":11,"value":"猪"}
 	],
 	"birthTime":[
+		{"key":-1,"value":"请选择"},
 		{"key":0,"value":"23:00-00:59"},{"key":1,"value":"01:00-02:59"},{"key":2,"value":"03:00-04:59"},{"key":3,"value":"05:00-06:59"},
 		{"key":4,"value":"07:00-08:59"},{"key":5,"value":"09:00-10:59"},{"key":6,"value":"11:00-12:59"},{"key":7,"value":"13:00-14:59"},
 		{"key":8,"value":"15:00-16:59"},{"key":9,"value":"17:00-18:59"},{"key":10,"value":"19:00-20:59"},{"key":11,"value":"21:00-22:59"}
 	],
 	"corporeity":[
+		{"key":-1,"value":"请选择"},
 		{"key":0,"value":"平和质"},
 		{"key":1,"value":"气虚质"},
 		{"key":2,"value":"阳虚质"},
@@ -27,5 +31,20 @@
 		{"key":7,"value":"气郁质"},
 		{"key":8,"value":"特禀质"}
 	],
-	"month":[]
+	"constellation":[
+		{"key":-1,"value":"请选择"},
+		{"key":1,"value":"白羊座"},
+		{"key":2,"value":"金牛座"},
+		{"key":3,"value":"双子座"},
+		{"key":4,"value":"巨蟹座"},
+		{"key":5,"value":"狮子座"},
+		{"key":6,"value":"处女座"},
+		{"key":7,"value":"天秤座"},
+		{"key":8,"value":"天蝎座"},
+		{"key":9,"value":"射手座"},
+		{"key":10,"value":"摩羯座"},
+		{"key":11,"value":"水瓶座"},
+		{"key":12,"value":"双鱼座"}
+	]
+
 }
