--- a/static/appData.json
+++ b/static/appData.json
@@ -62,6 +62,28 @@
 		{"key":0,"value":"鄂温克族"},{"key":0,"value":"德昂族"},{"key":0,"value":"保安族"},{"key":0,"value":"裕固族"},
 		{"key":0,"value":"京族"},{"key":0,"value":"塔塔尔族"},{"key":0,"value":"独龙族"},{"key":0,"value":"鄂伦春族"},
 		{"key":0,"value":"赫哲族"},{"key":0,"value":"门巴族"},{"key":0,"value":"珞巴族"},{"key":0,"value":"基诺族"}
+	],
+	"size":[
+		{"key":-1,"value":"请选择"},
+		{"key":0,"value":"XXXS"},
+		{"key":1,"value":"XXS"},
+		{"key":2,"value":"XS"},
+		{"key":3,"value":"S"},
+		{"key":4,"value":"M"},
+		{"key":5,"value":"L"},
+		{"key":6,"value":"XL"},
+		{"key":7,"value":"XXL"}
+	],
+	"faceShape":[
+		{"key":-1,"value":"请选择"},
+		{"key":0,"value":"圆脸"},
+		{"key":1,"value":"长方形脸"},
+		{"key":2,"value":"正方形脸"},
+		{"key":3,"value":"三角形脸"},
+		{"key":4,"value":"瓜子脸"},
+		{"key":5,"value":"凸侧脸"},
+		{"key":6,"value":"平侧脸"},
+		{"key":7,"value":"凹侧脸"}
 	]
 
 }
