节日纪事多列选择

--- a/static/appData.json
+++ b/static/appData.json
@@ -84,6 +84,7 @@
 		{"key":5,"value":"凸侧脸"},
 		{"key":6,"value":"平侧脸"},
 		{"key":7,"value":"凹侧脸"}
-	]
+	],
+	"festival":[" ","元旦节","春节","元宵节","妇女节","清明节","劳动节","儿童节","端午节","中秋节","国庆节","圣诞节"]
 
 }
