--- a/static/appData.json
+++ b/static/appData.json
@@ -1,4 +1,5 @@
 {
+	"yesOrNo":[{"key":-1,"value":"请选择"},{"key":1,"value":"是"},{"key":0,"value":"否"}],
 	"sex":[{"key":-1,"value":"请选择"},{"key":1,"value":"男"},{"key":2,"value":"女"}],
 	"bloodType":[
 		{"key":-1,"value":"请选择"},
@@ -85,6 +86,7 @@
 		{"key":6,"value":"平侧脸"},
 		{"key":7,"value":"凹侧脸"}
 	],
-	"festival":[" ","元旦节","春节","元宵节","妇女节","清明节","劳动节","儿童节","端午节","中秋节","国庆节","圣诞节"]
+	"festival":[" ","元旦节","春节","元宵节","妇女节","清明节","劳动节","儿童节","端午节","中秋节","国庆节","圣诞节"],
+	"weather":["请选择","晴","多云","阴","阵雨","雷阵雨","雨夹雪","小雨","中雨","大雨","暴雨","大暴雨","特大暴雨","大雪","小雪","中雪","暴雪","雾","有风","冰雹","打雷","闪电","龙卷风"]
 
 }
