增加空数据页，修改bug

--- a/static/appData.json
+++ b/static/appData.json
@@ -16,9 +16,9 @@
 	],
 	"birthTime":[
 		{"key":-1,"value":"请选择"},
-		{"key":0,"value":"23:00-00:59"},{"key":1,"value":"01:00-02:59"},{"key":2,"value":"03:00-04:59"},{"key":3,"value":"05:00-06:59"},
-		{"key":4,"value":"07:00-08:59"},{"key":5,"value":"09:00-10:59"},{"key":6,"value":"11:00-12:59"},{"key":7,"value":"13:00-14:59"},
-		{"key":8,"value":"15:00-16:59"},{"key":9,"value":"17:00-18:59"},{"key":10,"value":"19:00-20:59"},{"key":11,"value":"21:00-22:59"}
+		{"key":0,"value":"23时-1时(子时)"},{"key":1,"value":"1时-3时(丑时)"},{"key":2,"value":"3时-5时(寅时)"},{"key":3,"value":"5时-7时(卯时)"},
+		{"key":4,"value":"7时-9时(辰时)"},{"key":5,"value":"9时-11时(巳时)"},{"key":6,"value":"11时-13时(午时)"},{"key":7,"value":"13时-15时(未时)"},
+		{"key":8,"value":"15时-17时(申时)"},{"key":9,"value":"17时-19时(酉时)"},{"key":10,"value":"19时-21时(戌时)"},{"key":11,"value":"21时-23时(亥时)"}
 	],
 	"corporeity":[
 		{"key":-1,"value":"请选择"},
